2단계 - 리팩터링(메뉴) 피드백 반영 (#236)
* refactor(kitchenpos): apply step1 feedback

* refactor(kitchenpos): implement step2

* refactor(kitchenpos): menu refactoring

* refactor(kitchenpos): apply feedback for step2

---------

Co-authored-by: 이학성_Biz플랫폼개발팀 <cannan@sk.com>